# tagspeak_rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  Tagspeak_2.0.md  __router_tmp.txt  build.rs  red.tgsk  setup_vscode.tgsk  tagspeak_setup.exe.lnk  test.tgsk  tmp_file.txt  tmp_test.tgsk
docs/: AGENTS.md  Breakers_Playground_Report.md  CONTRIBUTING_PACKETS.md  PACKETS.json  README.md  Tagspeak_101.md  Tagspeak_2.0.md  error_cases.md  fun_packets.md  suggested_packets.md  tagspeak_ui.md  ui_packets.md
examples/: .tagspeak.toml  .tagspeak.toml.example  conditionals.tgsk  infix_if_else.tgsk  red.tgsk  smoke.tgsk  test.tgsk
examples/advanced/REPL/: llm_repl.tgsk
examples/advanced/breakers/: 03_yellow_paradox_indirect.tgsk  04_repl_ourobouros.tgsk  06_parsing_bomb_yaml.tgsk  07_http_path_traversal.tgsk  11_exec_injection.tgsk  12_file_handle_exhaustion.tgsk  15_scope_leak.tgsk  99_nuclear_option.tgsk
examples/advanced/http/: out.json
examples/basics/: array_obj.tgsk  call.tgsk  cd_get_exists.tgsk  compare.tgsk  cond.tgsk  cond_infix.tgsk  context.tgsk  dump_doc.tgsk  env_len.tgsk  error_test.tgsk  fun.tgsk  funct.tgsk  hello_world.tgsk  loop_sugar.tgsk  mod_push_iter.tgsk  parse_values.tgsk  playgroung.tgsk  rand.tgsk  smoke.tgsk  squares.tgsk  store.tgsk  tagspeak_cli.tgsk
examples/basics/data/: array_obj.tgsk  compare.tgsk  context.tgsk  dump_doc.tgsk  literals.tgsk  parse_values.tgsk
examples/basics/error_testing/: error_smoke.tgsk  error_test.tgsk  lint.tgsk  typo_packet.tgsk
examples/breakers/: 01_recursive_death_spiral.tgsk  02_box_escape_artist.tgsk  03_yellow_paradox_direct.tgsk  05_storage_collision.tgsk  06_parsing_bomb_json.tgsk  07_http_allowlist_bypass_at.tgsk  08_empty_everything.tgsk  09_integer_overflow_loop.tgsk  10_type_confusion.tgsk  13_conditional_confusion.tgsk  14_network_allowlist_wildcard.toml
examples/burn/: count_burn.tgsk  fib.tgsk
examples/docs/: PACKETS.json  update_packets_json.tgsk
examples/files/: chem.json  chem_lib.tgsk  load_and_modify.tgsk  search_demo.tgsk  search_json_demo.tgsk  trailing-comma-case-study.tgsk
examples/generic_tests/: cond_infix.tgsk  exec_out.json  funct.tgsk  literals.tgsk  log.tgsk  save.tgsk  squares.tgsk
examples/http/: http_get_json.tgsk
examples/load_demo/: main.tgsk
examples/load_demos/: main.tgsk
examples/load_yaml/: main.tgsk
examples/logging/: quick_log.tgsk  structured_log_json.tgsk  structured_log_toml.tgsk  structured_log_yaml.tgsk
examples/red_test/: red.tgsk
examples/run_examples/: run_and_call.tgsk  run_other.tgsk
misc/: app.manifest  claude.tgsk  tagspeak.code-snippets  version.json  version_update.tgsk
misc/Devlog/: UI.tgsk
misc/admin_tgsk_scripts/: admin_run.tgsk  auto_update.tgsk  update_packets_json.tgsk  version_update.tgsk
src/: error_style.rs  interpreter.rs  main.rs  router.rs
src/kernel/: ast.rs  boolops.rs  config.rs  fs_guard.rs  mod.rs  packet_catalog.rs  runtime.rs  values.rs
src/packets/: and.rs  call.rs  conditionals.rs  confirm.rs  dump.rs  eq.rs  exec.rs  fun.rs  funct.rs  ge.rs  gt.rs  http.rs  int.rs  le.rs  load.rs  log.rs  loop.rs  lt.rs  math.rs  mod.rs  modify.rs  msg.rs  ne.rs  not.rs  note.rs  or.rs  parse.rs  print.rs  save.rs  store.rs  util.rs
src/ui/: mod.rs  tree.rs
(+109 files in other folders)
