[package]
name = "tagspeak_rs"
version = "0.1.0"
edition = "2024"
default-run = "tagspeak_rs"

[dependencies]
which = "6"
dirs = "5"
clap = { version = "4.5.2", features = ["derive"] }
meval = "0.2"
anyhow = "1"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tempfile = "3"

# Windows-only deps
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
native-windows-gui = "1.0.13"
native-windows-derive = "1.0"
windows-sys = { version = "0.52", features = ["Win32_UI_Shell"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

# Linux-only deps (add only if you actually use it)
[target.'cfg(target_os = "linux")'.dependencies]
winit = "0.29"

# no [features] block needed

[[bin]]
name = "tagspeak_setup"
path = "src/bin/tagspeak_setup.rs"

[[bin]]
name = "tagspeak_setup_linux"
path = "src/bin/tagspeak_setup_linux.rs"
